<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Self Guided Reading Experiment</string>
    <string name="char_pattern">\\S</string>
    <string name="replace_char">-</string>

    <string-array name="tutorial_part_1">
        <item>Press the button with one finger to begin.</item>
        <item>In this experiment you will read sentences by dragging your finger under the text. When you drag your finger all the way to the end, you will be advanced to the next sentence. \n\n(Press the button below to continue)</item>
        <item>You can move your finger to the right to see new words or, if you wish to, move your finger to the left to review words you read previously. \n\n(Press the button below to continue)</item>
        <item>Proceed as quickly as you can, but… Make sure you fully understand what you are reading. Occasionally, you will be asked comprehension questions. Answer these questions by pressing either the red button for No or the green button for Yes, whichever one corresponds to the correct answer.\n\n(Press the button now to continue)</item>
        <item>The following items are for practice.</item>
    </string-array>
    <string-array name="tutorial_part_2">
        <item>End of practice. If you have any questions, please ask the researcher at this point. When ready, press the button to begin.</item>
    </string-array>

    <string name="good_response">CORRECT</string>
    <string name="poor_response">Please proceed to the next item</string>
    
    <string name="text_break_prefix">End of block. </string>
    <string name="text_break_suffix"> blocks left. Continue when ready.</string>
    <string name="text_thanks">That\'s the end, thank you.</string>
    
    <string name="subject_introduction">Welcome to the\nSelf Paced Reading Experiment</string>
    <string name="request_text">Please fill in the following information.</string>
    <string name="question_is_english_first">Is English your first language?</string>
    <string name="question_right_handed">Are you right handed?</string>
    <string name="question_age">Age*</string>
    <string name="question_gender">Gender*</string>
    <string name="about_required_text">*optional</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="radio_yes">Yes</string>
    <string name="radio_no">No</string>
    <string name="text_complain_incomplete_info">Please complete the information.</string>
    
    <string name="admin_introduction">Self Guided Reading Experiment</string>
    <string name="experiment_run_explantion">When an experiment is run the data will not be permanently saved until the entire experiment is complete.</string>
    <string name="label_run_experiment1">Begin Experiment A</string>
    <string name="label_run_experiment2">Begin Experiment B</string>
    <string name="export_data_explanation">When the data is exported it is saved to the device\'s internal disk. To access this data you will need to plug the device into a computer and copy it in the regular manner.</string>
    <string name="label_export_data">Export Data</string>
    <string name="label_continue">Continue</string>
    <string name="label_skip">Skip</string>
    
    <string name="dialog_set_number">Set</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_picker_title">Choose a number</string>
    
    <string name="dialog_export_title">Exporting Data</string>
    <string name="dialog_store_data_title">Storing Data</string>
    
    <string name="clear_data_explanation">To clear the experiment data set press and hold the button, then click yes in the dialog. Clearing the data is permanent so be careful.</string>
    <string name="label_clear_data">Clear Data</string>
    <string name="text_clear_data">Clear all collected data?</string>

</resources>