<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mine="http://schemas.android.com/apk/res/nz.ac.otago.linguistics.sgre"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    
    <TextView
        android:id="@+id/text_subject_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/subject_introduction"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:layout_marginTop="15dp"
        android:text="@string/request_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/english_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text_request"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:paddingLeft="200dp"
        android:paddingRight="200dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.2"
            android:text="@string/question_is_english_first"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/radio_group_english_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:layout_weight="0.4"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_english_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:minWidth="100dp"
                android:text="@string/radio_yes" />

            <RadioButton
                android:id="@+id/radio_english_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_no" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/handedness_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/english_section"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:paddingLeft="200dp"
        android:paddingRight="200dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.2"
            android:text="@string/question_right_handed"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/radio_group_handedness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:layout_weight="0.4"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_right_handed_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:minWidth="100dp"
                android:text="@string/radio_yes" />

            <RadioButton
                android:id="@+id/radio_right_handed_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_no" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gender_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/handedness_section"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:paddingLeft="200dp"
        android:paddingRight="200dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.2"
            android:text="@string/question_gender"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/radio_group_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:layout_weight="0.4"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_gender_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:minWidth="100dp"
                android:text="@string/radio_female" />

            <RadioButton
                android:id="@+id/radio_gender_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_male" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/age_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/gender_section"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:paddingLeft="200dp"
        android:paddingRight="200dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.2"
            android:text="@string/question_age"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:layout_weight="0.4" >

            <com.michaelnovakjr.numberpicker.NumberPicker
                android:id="@+id/input_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                mine:defaultValue="0"
                mine:endRange="200"
                android:inputType="numberDecimal"
                mine:startRange="0" />
            <!-- <EditText -->
            <!-- android:id="@+id/input_age" -->
            <!-- android:layout_width="wrap_content" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:inputType="numberDecimal" -->
            <!-- android:text="10" /> -->
        </FrameLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age_section"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:layout_marginTop="15dp"
        android:text="@string/about_required_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/title"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:padding="40dp"
        android:text="@string/label_continue" />

    <!-- <Button -->
    <!-- android:id="@+id/button_skip" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_alignParentBottom="true" -->
    <!-- android:layout_margin="20dp" -->
    <!-- android:layout_toLeftOf="@+id/button_continue" -->
    <!-- android:text="@string/label_skip" /> -->

</RelativeLayout>